tests/e2e/ice950.error
Error: syntax error in story at line 2, column 12

2|        return {}
                 ^^

E0145: Map initialization without elements must be typed. Use `as ...`
