tests/e2e/ice950.story
function foo body:any returns string
    return {}

a = foo()
